force-app/main/default/objects/ADK_Branch__c/ADK_Branch__c.object-meta.xml
<CustomObject>
    <label>ADK Branch</label>
    <nameField>
        <label>ADK Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADK Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>