force-app/main/default/objects/ADK_Branch__c/fields/ADK_Project__c.field-meta.xml
<CustomField>
    <fullName>ADK_Project__c</fullName>
    <label>ADK Project</label>
    <referenceTo>ADK_Project__c</referenceTo>
    <relationshipName>Project_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>