force-app/main/default/objects/ADK_Branch__c/fields/Deployer__c.field-meta.xml
<CustomField>
    <fullName>Deployer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployer</label>
    <referenceTo>Deployer__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>