force-app/main/default/objects/ADK_Branch__c/fields/Extra_URL_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Extra_URL_Parameters__c</fullName>
    <defaultValue>&quot;&amp;email=required&quot;</defaultValue>
    <inlineHelpText>Extra Parameters to pass to the Launcher URL</inlineHelpText>
    <label>Extra URL Parameters</label>
    <length>100</length>
    <type>Text</type>
</CustomField>