force-app/main/default/objects/ADK_Branch__c/fields/Repository_Branch__c.field-meta.xml
<CustomField>
    <fullName>Repository_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository Branch</label>
    <referenceTo>Repo_Branch__c</referenceTo>
    <relationshipLabel>ADK Branches</relationshipLabel>
    <relationshipName>ADK_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>