force-app/main/default/objects/ADK_Branch__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>Deployer__r.Base_URL__c &amp;&quot;/launch?template=&quot;&amp; Repository_Branch__r.Repo_URL__c &amp;  Extra_URL_Parameters__c</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>